Move gdot to jdot
Simplifies I3 config and moves to meta keys
Ensures compton is run on startup

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,125 +1,131 @@
 # https://i3wm.org/docs/userguide.html
-set $mod Mod1
+set $alt Mod1
+set $meta Mod4
+
+set $term --no-startup-id kitty
+set $font pango:Fira Code 10
+
+set $workspace1 Main
+set $workspace2 Secondary
+set $workspace3 Tertiary
+set $workspace4 4
+set $workspace5 5 
+set $workspace6 6
+set $workspace7 7
+set $workspace8 8
+set $workspace9 9
+set $workspace10 10
+
+
+##
+# Floating
+#
+# floating_modifier $meta
+bindsym $meta+Shift+f floating toggle; sticky toggle; exec --no-startup-id hover left
+bindsym $meta+Shift+s sticky toggle
+
+
+##
+# Bar
+##
+bar {
+  position bottom
+    status_command i3blocks
+    mode dock
+    modifier None
+    font $font
+}
+
+
+##
+# Navigation
+#
+bindsym $meta+h focus left
+bindsym $meta+j focus down
+bindsym $meta+k focus up
+bindsym $meta+l focus right
+
+
+##
+# Rearrangement
+#
+bindsym $meta+s split toggle
+
+bindsym $meta+Shift+h move left
+bindsym $meta+Shift+j move down
+bindsym $meta+Shift+k move up
+bindsym $meta+Shift+l move right
+
+
+##
+# Commands
+#
+bindsym $meta+q kill
+
+# Reload the configuration file
+bindsym $meta+Shift+c reload 
+
+# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $meta+Shift+r restart 
+
+bindsym $meta+BackSpace exec espeak 'Locked' & i3lock -t -i ~/.lockscreen.png
+bindsym $meta+Shift+BackSpace exec espeak 'Logout' && i3-msg exit
+
+
+##
+# Applications
+#
+bindsym $meta+p exec ~/.local/tools/rofing
+bindsym $meta+Shift+p exec ~/.local/tools/rofing Picker
+
+bindsym $meta+Return exec $term
+
+
+##
+# Workspaces
+# 
+bindsym $meta+1 workspace $workspace1
+bindsym $meta+2 workspace $workspace2
+bindsym $meta+3 workspace $workspace3
+bindsym $meta+4 workspace $workspace4
+bindsym $meta+5 workspace $workspace5
+bindsym $meta+6 workspace $workspace6
+bindsym $meta+7 workspace $workspace7
+bindsym $meta+8 workspace $workspace8
+bindsym $meta+9 workspace $workspace9
+bindsym $meta+0 workspace $workspace10
+
+bindsym $meta+Shift+1 move container to workspace $workspace1
+bindsym $meta+Shift+2 move container to workspace $workspace2
+bindsym $meta+Shift+3 move container to workspace $workspace3
+bindsym $meta+Shift+4 move container to workspace $workspace4
+bindsym $meta+Shift+5 move container to workspace $workspace5
+bindsym $meta+Shift+6 move container to workspace $workspace6
+bindsym $meta+Shift+7 move container to workspace $workspace7
+bindsym $meta+Shift+8 move container to workspace $workspace8
+bindsym $meta+Shift+9 move container to workspace $workspace9
+bindsym $meta+Shift+0 move container to workspace $workspace10
+
+##
+# Resizing
+#
+bindsym $meta+f fullscreen toggle
+bindsym $meta+r mode "resize"
+mode "resize" {
+  bindsym h resize shrink width 10 px or 10 ppt
+    bindsym j resize grow height 10 px or 10 ppt
+    bindsym k resize shrink height 10 px or 10 ppt
+    bindsym l resize grow width 10 px or 10 ppt
+
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+    bindsym $meta+r mode "default"
+}
+
+##
+# Misc
+#
+font $font
 for_window [class="^.*"] border pixel 2
 
-set $term --no-startup-id $TERMINAL
-
-for_window [instance="dropdown_*"] floating enable
-for_window [instance="dropdown_*"] move scratchpad
-for_window [instance="dropdown_*"] sticky enable
-for_window [instance="dropdown_*"] scratchpad show
-for_window [instance="dropdown_tmuxdd"] resize set 625 450
-for_window [instance="dropdown_dropdowncalc"] resize set 800 300
-for_window [instance="dropdown_tmuxdd"] border pixel 3
-for_window [instance="dropdown_dropdowncalc"] border pixel 2
-for_window [instance="dropdown_*"] move position center
-# set $mod Mod4 # Windows/Meta
-
-bar {
-	font pango:mono 10
-	status_command i3blocks
-	position top
-	mode dock
-	modifier None
-}
-# font pango:monospace 8
-font pango:DejaVu Sans Mono 8
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# start a terminal
-bindsym $mod+Return exec kitty
-
-
-# kill focused window
-bindsym $mod+q kill
-
-bindsym $mod+semicolon exec --no-startup-id i3-dmenu-desktop
-
-# change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-bindsym $mod+s split toggle
-bindsym $mod+Shift+s sticky toggle
-
-bindsym $mod+Shift+f floating toggle; sticky toggle; exec --no-startup-id hover left
-
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
-# switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+BackSpace exec espeak 'I cant believe youve done this' && i3-msg exit
-bindsym $mod+BackSpace exec espeak 'Get locked son' & i3lock -t -i ~/.lockscreen.png
-
-# resize window (you can also use the mouse for that)
-bindsym $mod+r mode "resize"
-mode "resize" {
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
-
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-bindsym XF86MonBrightnessDown   exec sudo modbrightness -
-bindsym XF86MonBrightnessUp     exec sudo modbrightness +
-bindsym XF86AudioMute           exec pamixer --toggle-mute
-bindsym XF86AudioLowerVolume    exec pamixer --decrease 5
-bindsym XF86AudioRaiseVolume exec pamixer --increase 5
-
 exec --no-startup-id sleep 15; cat ./.xinitrc | sh
-
