--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,6 @@
 set $alt Mod1
 set $meta Mod4
 
-set $term --no-startup-id kitty
 set $font pango:Fira Code 10
 
 set $workspace1 Main
@@ -78,7 +77,7 @@ bindsym $meta+Shift+BackSpace exec espeak 'Logout' && i3-msg exit
 bindsym $meta+p exec ~/.local/tools/rofing
 bindsym $meta+Shift+p exec ~/.local/tools/rofing Picker
 
-bindsym $meta+Return exec $term
+bindsym $meta+Return exec --no-startup-id ~/.local/bin/i3/kittyhere
 
 
 ##
@@ -129,3 +128,4 @@ font $font
 for_window [class="^.*"] border pixel 2
 
 exec --no-startup-id sleep 15; cat ./.xinitrc | sh
+exec --no-startup-id compton
