--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,9 +11,9 @@ open_url_with google-chrome
 copy_on_select yes
 strip_trailing_spaces smart
 
-enable_audio_bell no
+enable_audio_bell yes
 bell_on_tab yes
-window_alert_on_bell yes
+window_alert_on_bell no
 # command_on_bell none
 
 
