--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,115 +1,83 @@
-# https://i3wm.org/docs/userguide.html
 set $alt Mod1
 set $meta Mod4
-
-set $font xft:Fura Code Nerd Font Mono 10
-
-set $workspace1 Main
+set $workspace1 Primary
 set $workspace2 Secondary
 set $workspace3 Tertiary
 set $workspace4 4
-set $workspace5 5 
+set $workspace5 5
 set $workspace6 6
 set $workspace7 7
 set $workspace8 8
-set $workspace9 9
-set $workspace10 10
 
+
+##
+# Style
+#
+set $font xft:Fura Code Nerd Font Mono 10
+# set $font xft:URWGothic-Book 11
+font $font
+client.focused #bfbfbf #162025 #bfbfbf #193a48 #193a48
+client.focused_inactive #bfbfbf #162025 #bfbfbf #193a48 #193a48
+client.unfocused #bfbfbf #162025 #bfbfbf #193a48 #193a48
+client.urgent #bfbfbf #162025 #bfbfbf #193a48 #193a48
+client.placeholder #bfbfbf #162025 #bfbfbf #193a48 #193a48
+client.background #162025
+new_window pixel 1
+new_float normal
+hide_edge_borders none
+
+##
+# Gaps
+#
 gaps inner 10
 gaps outer 10
+smart_gaps on
 
-bindsym $meta+m gaps inner current plus 5
-bindsym $meta+Shift+m gaps inner current minus 5
-
-##
-# Floating
-#
-# floating_modifier $meta
-bindsym $meta+Shift+f floating toggle; sticky toggle; exec --no-startup-id hover left
-bindsym $meta+Shift+s sticky toggle
-
-
-##
-# Bar
-##
-bar {
-  position bottom
-    status_command i3blocks
-    mode dock
-    modifier None
-    font $font
+set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+bindsym $meta+Shift+g mode "$mode_gaps"
+mode "$mode_gaps" {
+        bindsym o      mode "$mode_gaps_outer"
+        bindsym i      mode "$mode_gaps_inner"
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_inner" {
+        bindsym plus  gaps inner current plus 5
+        bindsym minus gaps inner current minus 5
+        bindsym 0     gaps inner current set 0
+        bindsym Shift+plus  gaps inner all plus 5
+        bindsym Shift+minus gaps inner all minus 5
+        bindsym Shift+0     gaps inner all set 0
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+mode "$mode_gaps_outer" {
+        bindsym plus  gaps outer current plus 5
+        bindsym minus gaps outer current minus 5
+        bindsym 0     gaps outer current set 0
+        bindsym Shift+plus  gaps outer all plus 5
+        bindsym Shift+minus gaps outer all minus 5
+        bindsym Shift+0     gaps outer all set 0
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
 }
 
 
 ##
-# Navigation
+# Bar
 #
-bindsym $meta+h focus left
-bindsym $meta+j focus down
-bindsym $meta+k focus up
-bindsym $meta+l focus right
-
-
-##
-# Rearrangement
-#
-bindsym $meta+s split toggle
-
-bindsym $meta+Shift+h move left
-bindsym $meta+Shift+j move down
-bindsym $meta+Shift+k move up
-bindsym $meta+Shift+l move right
-
-
-##
-# Commands
-#
-bindsym $meta+q kill
-bindsym $meta+Shift+e exit
-
-# Reload the configuration file
-bindsym $meta+Shift+c reload 
-
-# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $meta+Shift+r restart 
-
-bindsym $meta+BackSpace exec espeak 'Locked' & i3lock -t -i ~/.lockscreen.png
-bindsym $meta+Shift+BackSpace exec espeak 'Logout' && i3-msg exit
-
-
-##
-# Applications
-#
-bindsym $meta+p exec ~/.local/tools/rofing
-bindsym $meta+Shift+p exec ~/.local/tools/rofing Picker
-
-bindsym $meta+Return exec --no-startup-id ~/.local/bin/i3/kittyhere
-
-
-##
-# Workspaces
-# 
-bindsym $meta+1 workspace $workspace1
-bindsym $meta+2 workspace $workspace2
-bindsym $meta+3 workspace $workspace3
-bindsym $meta+4 workspace $workspace4
-bindsym $meta+5 workspace $workspace5
-bindsym $meta+6 workspace $workspace6
-bindsym $meta+7 workspace $workspace7
-bindsym $meta+8 workspace $workspace8
-bindsym $meta+9 workspace $workspace9
-bindsym $meta+0 workspace $workspace10
-
-bindsym $meta+Shift+1 move container to workspace $workspace1
-bindsym $meta+Shift+2 move container to workspace $workspace2
-bindsym $meta+Shift+3 move container to workspace $workspace3
-bindsym $meta+Shift+4 move container to workspace $workspace4
-bindsym $meta+Shift+5 move container to workspace $workspace5
-bindsym $meta+Shift+6 move container to workspace $workspace6
-bindsym $meta+Shift+7 move container to workspace $workspace7
-bindsym $meta+Shift+8 move container to workspace $workspace8
-bindsym $meta+Shift+9 move container to workspace $workspace9
-bindsym $meta+Shift+0 move container to workspace $workspace10
+bar {
+  position top
+  #status_command i3blocks
+    mode dock
+    modifier None
+    font $font
+    colors {
+        background #162025
+   }
+}
 
 ##
 # Resizing
@@ -121,17 +89,117 @@ mode "resize" {
     bindsym j resize grow height 10 px or 10 ppt
     bindsym k resize shrink height 10 px or 10 ppt
     bindsym l resize grow width 10 px or 10 ppt
-
     bindsym Return mode "default"
     bindsym Escape mode "default"
     bindsym $meta+r mode "default"
 }
 
 ##
-# Misc
+# Navigation
 #
-font $font
-for_window [class="^.*"] border pixel 2
+bindsym $meta+h focus left
+bindsym $meta+j focus down
+bindsym $meta+k focus up
+bindsym $meta+l focus right
+bindsym $meta+Shift+minus move scratchpad
+bindsym $meta+minus scratchpad show
 
-exec --no-startup-id sleep 15; cat ./.xinitrc | sh
-exec --no-startup-id compton
+##
+# Floating / Stickiness
+#
+bindsym $meta+Return exec --no-startup-id ~/.local/bin/i3/kittyhere
+bindsym $meta+Shift+f floating toggle; sticky toggle; exec --no-startup-id hover left
+floating_modifier $meta
+bindsym $meta+Shift+space floating toggle
+bindsym $meta+space focus mode_toggle 
+
+##
+# Rearrangement
+#
+bindsym $meta+Shift+h move left
+bindsym $meta+Shift+j move down
+bindsym $meta+Shift+k move up
+bindsym $meta+Shift+l move right
+# bindsym $meta+h split h;exec notify-send 'tile horizontally'
+# bindsym $meta+v split v;exec notify-send 'tile vertically'
+bindsym $meta+s split toggle
+#bindsym $meta+s layout stacking
+bindsym $meta+w layout tabbed
+bindsym $meta+e layout toggle split
+
+
+##
+# i3 Commands
+#
+bindsym $meta+q kill
+bindsym $meta+Shift+r restart
+bindsym $meta+Shift+c reload
+bindsym $meta+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+##
+# Misc Mappings
+#
+bindsym $meta+p exec ~/.local/tools/rofing
+bindsym $meta+Shift+p exec ~/.local/tools/rofing Picker
+bindsym $meta+BackSpace exec espeak 'Locked' & i3lock -t -i ~/.lockscreen.png
+bindsym $meta+Shift+BackSpace exec espeak 'Logout' && i3-msg exit
+
+##
+# Workspaces
+#
+workspace_auto_back_and_forth yes
+bindsym $meta+b workspace back_and_forth
+bindsym $meta+Shift+b move container to workspace back_and_forth; workspace back_and_forth
+bindsym $meta+1 workspace $workspace1
+bindsym $meta+2 workspace $workspace2
+bindsym $meta+3 workspace $workspace3
+bindsym $meta+4 workspace $workspace4
+bindsym $meta+5 workspace $workspace5
+bindsym $meta+6 workspace $workspace6
+bindsym $meta+7 workspace $workspace7
+bindsym $meta+8 workspace $workspace8
+bindsym $meta+Shift+1 move container to workspace $workspace1
+bindsym $meta+Shift+2 move container to workspace $workspace2
+bindsym $meta+Shift+3 move container to workspace $workspace3
+bindsym $meta+Shift+4 move container to workspace $workspace4
+bindsym $meta+Shift+5 move container to workspace $workspace5
+bindsym $meta+Shift+6 move container to workspace $workspace6
+bindsym $meta+Shift+7 move container to workspace $workspace7
+bindsym $meta+Shift+8 move container to workspace $workspace8
+
+
+##
+# Window rules
+#
+# for_window [title="alsamixer"] floating enable border pixel 1
+# for_window [class="Calamares"] floating enable border normal
+# for_window [class="Clipgrab"] floating enable
+# for_window [title="File Transfer*"] floating enable
+# for_window [class="Galculator"] floating enable border pixel 1
+# for_window [class="GParted"] floating enable border normal
+# for_window [class="(?i)System-config-printer.py"] floating enable border normal
+# switch to workspace with urgent window automatically
+# for_window [urgent=latest] focus
+
+
+##
+# Restart
+#
+bindsym $meta+0 mode "$mode_system"
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym s exec --no-startup-id i3exit suspend, mode "default"
+    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
+    bindsym e exec --no-startup-id i3exit logout, mode "default"
+    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+##
+# Programs
+#
+exec --no-startup-id nitrogen --restore; sleep 1; compton -b; conky -d
