--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 ##
 # OPTIONS
 set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",*259col*:Tc"
+# set-option -ga terminal-overrides ",*259col*:Tc"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g history-limit 20000        # Scrollback history for new panes
 set -g buffer-limit 20            # Count of paste buffer entries to retain
