--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,8 @@ set-window-option -g other-pane-width 80
 # Prefer vi style key table
 setw -g mode-keys vi
 set -g @copy_use_osc52_fallback on
-
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 # List of enviornment variables to keep from startup shell
 set -g update-environment \
   "DISPLAY\
@@ -182,15 +183,11 @@ set -g status-right-length 100
 
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
 wg_git_status="#[fg=$color_secondary] #{simple_git_status} #[default]"
-wg_kubernetes="#($HOME/.tmux/kube-line white #51b5c3 #5cadf1)#[default]"
 
 # #S is session number
 set -g status-left "#[fg=$color_session_text] %A #[default]"
-# set -g status-left "#{pane_current_path}"
  
-# TODO: Kube context
-# TODO: AWS profile
-set -g status-right "#{prefix_highlight} $wg_is_keys_off$wg_is_zoomed$wg_kubernetes |$wg_git_status"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off$wg_is_zoomed$wg_kubernetes |$wg_git_status#[fg=$color_main][#(cd #{pane_current_path} && ~/scripts/statusbar/buildstatus)#[fg=$color_main]]"
 
 # Configure tmux-prefix-highlight colors
 set -g @prefix_highlight_output_prefix '['
