--- a/.gitconfig
+++ b/.gitconfig
@@ -144,8 +144,8 @@
     "
 [credential]
 	helper = store
-; [url "git@github.com:"]
-; 	insteadOf = https://github.com/
+ [url "git@github.com:"]
+ 	insteadOf = https://github.com/
 ; [branch]
 ; 	autosetupmerge = always
 ; [branch]
